--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_iconly: ^1.0.2
+  flutter_card_swiper: ^7.0.2
+  dependencies:
+ 
+
 
 dev_dependencies:
   flutter_test:
