--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_iconly: ^1.0.2
   flutter_card_swiper: ^7.0.2
+  page_transition: ^2.2.1
+ 
   
  
 
